# todo-fullstack

./: .gitignore  CLAUDE.md  DATABASE_MIGRATION_NEEDED.md  README.md
.claude/: settings.local.json
.claude/agents/: fastapi-backend-engineer.md  nextjs-frontend-engineer.md  product-architect.md  security-auth-guardian.md  spec-engineer.md
.claude/skills/: 01-spec-driven-development.md  02-agentic-development-workflow.md  03-rest-api-design.md  04-jwt-authentication-authorization.md  05-monorepo-architecture.md  06-fastapi-python-backend.md  07-nextjs-fullstack-integration.md  08-database-modeling-sqlmodel.md  09-secure-frontend-backend-communication.md  10-technical-documentation-hackathon.md
.specify/memory/: constitution.md
Todo-app/: demo_app.py
Todo-app/src/: commands.py  display.py  main.py  task_manager.py
Todo-app/tests/: __init__.py  test_display.py  test_integration.py  test_models.py  test_task_manager.py  test_validation.py
backend/: .env.example  main.py  pytest.ini  requirements.txt  test_integration.py  todo_dev.db
backend/frontend/: test_auth_flow.js
backend/src/: database.py  init_db.py
backend/tests/: conftest.py
console/: pyproject.toml  requirements.md  test_interactive.py
console/src/: __init__.py  commands.py  display.py  main.py  models.py  task_manager.py  validation.py
frontend/: .env.example  jest.config.js  jest.setup.js  middleware.ts  package-lock.json  package.json
specs/001-todo-inmemory-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-todo-web/: E2E_TEST_SCENARIOS.md  (+12 more)
(+51 files in other folders)
