[project]
name = "todo-app"
version = "0.1.0"
description = "Todo In-Memory Console App - A command-line task manager"
authors = [{name = "Todo App Team"}]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
